# sxd-document

./: Cargo.toml  README.md
.github/workflows/: ci.yml
compatibility-tests/compile-fail/: Cargo.toml
src/: dom.rs  dom_no_unsafe.rs  lazy_hash_map.rs  lib.rs  parser.rs  parser_no_unsafe.rs  raw.rs  raw_no_unsafe.rs  string_pool.rs  string_pool_no_unsafe.rs  thindom.rs  thindom_no_unsafe.rs  writer.rs  writer_no_unsafe.rs
