[package]
name = "sxd-document-no-unsafe"
version = "0.4.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "Neil Soiffer <neil.soiffer@gmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "A Rust XML DOM library"
readme = "README.md"
keywords = ["xml"]

repository = "https://github.com/NSoiffer/sxd-document-no-unsafe"
documentation = "https://docs.rs/sxd-document"

license = "MIT"

[features]
default = ["typed-arena"]
no-unsafe = ["typed-generational-arena"]
__internal_expose_string_pool = []

[dependencies]
peresil = "0.3.0"
typed-arena = { version = "2.0", optional = true }
typed-generational-arena = { version = "0.2", optional = true }
